cli/src/tests/error/first.sibs
first [];
first [os window => "release{$version}-win.zip";]
first ();